--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -12,7 +12,7 @@
   {% csrf_token %}
   {{ form|crispy }}
   <button class="btn btn-primary" type="submit">Login</button>
-  or <a class="btn btn-info" href="{% url 'signup' %}">Signup</a>
+  or <a href="{% url 'signup' %}">Signup</a>
 
 </form>
 {% endif %}
