--- a/src/templates/registration/signup.html
+++ b/src/templates/registration/signup.html
@@ -11,7 +11,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form | crispy }}
-    <button class="btn btn-primary" type="submit">Sign up</button> or  <a class="btn btn-info" href="{% url 'login' %}">Login</a>
+    <button class="btn btn-primary" type="submit">Sign up</button> or  <a  href="{% url 'login' %}">Login</a>
 
   </form>
 {% endif %}
